updated footer styles to fix alignment and deleted ContactCard from ProductView component

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,16 +25,20 @@
 	justify-content: flex-end;
 }
 
-@media only screen and (max-width: 890px) {
-	.footer__container__content:nth-of-type(1) {
-		width: 50%;
+@media only screen and (max-width: 999px) {
+	.footer__container__content:nth-of-type(1) > p {
+		width: 70%;
 	}
-}
 
-@media only screen and (max-width: 768px) {
 	.footer__container__content:nth-of-type(1),
 	.footer__container__content:nth-of-type(2) {
 		width: 100%;
 		justify-content: flex-start;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.footer__container__content:nth-of-type(1) > p {
+		width: 100%;
 	}
 }
